RESOLVED FIXED90176
Speech JavaScript API: Don't dispatch end event after ActiveDOMObject::stop()
https://bugs.webkit.org/show_bug.cgi?id=90176
Summary Speech JavaScript API: Don't dispatch end event after ActiveDOMObject::stop()
Hans Wennborg
Reported 2012-06-28 06:59:50 PDT
Speech JavaScript API: Don't dispatch end event after ActiveDOMObject::stop()
Attachments
Patch (4.50 KB, patch)
2012-06-28 07:07 PDT, Hans Wennborg
no flags
Hans Wennborg
Comment 1 2012-06-28 07:07:34 PDT
Hans Wennborg
Comment 2 2012-06-28 07:10:16 PDT
Adam, would you like to take a look?
WebKit Review Bot
Comment 3 2012-06-28 09:52:58 PDT
Comment on attachment 149946 [details] Patch Clearing flags on attachment: 149946 Committed r121438: <http://trac.webkit.org/changeset/121438>
WebKit Review Bot
Comment 4 2012-06-28 09:53:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.